--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BotAhmad",
+  "name": "ShuichiBot",
   "version": "1.0.0",
   "description": "bot whatsapp lewat hp doang",
   "main": "index.js",
